create main page api && docs
