# app/Modules/MainPage/Resources/views/index.blade.php
@@ -1,0 +1,9 @@
+@extends('mainpage::layouts.master')
+
+@section('content')
+    <h1>Hello World</h1>
+
+    <p>
+        This view is loaded from module: {!! config('mainpage.name') !!}
+    </p>
+@endsection
