# app/Modules/MainPage/Routes/api.php
@@ -1,0 +1,15 @@
+<?php
+
+use App\Modules\MainPage\Http\Controllers\MainPageController;
+
+/*
+|--------------------------------------------------------------------------
+| API Routes
+|--------------------------------------------------------------------------
+|
+| Here is where you can register API routes for your application. These
+| routes are loaded by the RouteServiceProvider within a group which
+| is assigned the "api" middleware group. Enjoy building your API!
+|
+*/
+Route::get('main_page', MainPageController::class . '@index');
